--- a/index.html
+++ b/index.html
@@ -30,24 +30,8 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="img/RFV5s_grey_5s.svg" height="37px">
+                    <img id="RFV_logo" src="img/RFV5s_grey_5s.svg" height="48px">
                 </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="hidden"><a href="#page-top"></a></li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#education">Education</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#programming">Programming</a>
-                    </li>
-                </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -63,8 +47,8 @@
                         <p class="intro-text">
                            <b>Riaan Francois Venter</b><br><br>
                            <b>FinTech</b> Developer, Investor and Advisor<br><br>
-                            Over a decades experience in wealth management and software development
-                            <table style="width:100%; font-size: 23px;">
+                            <font style="font-size: 0.75em;">Over a decades experience in wealth management and software development</font>
+                            <table style="width:100%; font-size: 1.5em;">
                                 <tr>
                                     <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a><br/><br/></td>
                                 </tr>
@@ -97,7 +81,7 @@
         <div class="details-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1><font style="color:rgb(76,76,255)">About</font></h1>
+                    <h1>About</h1>
                     <p>
                     <img src="img/RFVenter.jpg" width="256" style="border:8px solid white "/><br><br>
                     Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
@@ -136,7 +120,7 @@
         <div class="education-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1><font style="color:rgb(0,164,0)">Education</font></h1>
+                    <h1>Education</h1>
                     <table class="table">
                         <tr><td>Investment Advice Diploma</td><td>Chartered Institute of Securities and Investments (London)</td></tr>
                         <tr><td>Award in Financial Planning</td><td>CII (London)</td></tr>
@@ -171,7 +155,7 @@
         <div class="programming-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1><font style="color:rgb(255,28,28)">Programming</font></h1>
+                    <h1>Programming</h1>
                     <p>
                     	I finish every project that I start. I overcome every challenge that I face. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
                     </p>
