Recent picture of me

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About</h1>
                     <p>
-                    <img src="img/RFVenter.jpg" width="256" style="border:8px solid white "/><br><br>
+                    <img src="img/20200107.jpg" width="256" style="border:8px solid white "/><br><br>
                     Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
