New funcky profile images

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
+    <script type="text/JavaScript">
+        function starter()  {
+            var pic_number = Math.ceil(Math.random() * 27);
+            var pic_image = document.getElementById('RFV_img');
+            pic_image.src = "img/" + pic_number + '.jpg';
+        }
+    </script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="starter();">
@@ -83,7 +90,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About</h1>
                     <p>
-                    <img src="img/20200107.jpg" width="256" style="border:8px solid white "/><br><br>
+                    <img id="RFV_img" src="" width="256" style="border:8px solid white "/><br><br>
                     Standing at the bleeding edge of finance and computation, creating value, very well. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as managing substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
