--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About</h1>
                     <p>
-                    <img id="RFV_img" src="" width="256" style="border:8px solid white; border-radius: 25px;"/><br><br>
+                    <img id="RFV_img" src="" height="256px" style="border:8px solid white; border-radius: 25px;"/><br><br>
                     I Stand at the bleeding edge of finance and computation. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as manage substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
