--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="img/RFV5s_yellow.svg" height="32px">
+                    <img id="RFV_logo" src="img/RFV5s_yellow.svg" height="32em">
                 </a>
-                <img id="RFV_img2" src="" height="64px" style="border:2px solid white; border-radius: 4px;"/>
+                <img id="RFV_img2" src="" height="64em" style="border:2px solid white; border-radius: 4px;"/>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -54,8 +54,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                           <b>Riaan Francois Venter</b><br><br>
-                           <b>FinTech</b> Developer, Investor and Advisor<br>
+                           <b>Riaan Francois Venter</b><br>
+                           FinTech Developer, Investor and Advisor<br>
                             <font style="font-size: 0.75em;">13 years+ of wealth management and software development</font>
                             <table style="width:100%; font-size: 1.5em;">
                                 <tr>
@@ -87,7 +87,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About</h1>
                     <p>
-                    <img id="RFV_img" src="" height="256px" style="border:8px solid white; border-radius: 25px;"/><br><br>
+                    <img id="RFV_img" src="" height="256em" style="border:8px solid white; border-radius: 25px;"/><br><br>
                     I Stand at the bleeding edge of finance and computation. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as manage substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
