Fixed resume link

--- a/index.html
+++ b/index.html
@@ -97,23 +97,14 @@
                     Actively involved in FinTech, currently focusing on cryptocurrency investments and smart contracts, and part of a consortia exploring business opportunities within the industry.</p>
                     <p>
                     I am a family man, exercise daily, eat healthily, don't drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
-                    <h3>Learn About Ethereum</h3>
                     <p>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="files/The Modern Ethereum.pdf" class="btn btn-default btn-lg">The Modern Ethereum</a>
+                            <a class="btn btn-default btn-lg" href="https://drive.google.com/open?id=1a7dQd7BJjtR1qF8Yx6-L_gXy4D2BExIv">Resume / CV</a>
                         </li>
                     </ul>
                     </p>
-                    <!--h3>Resume</h3>
-                    <p>
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a class="btn btn-default btn-lg" href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume</a>
-                        </li>
-                    </ul>
-                    </p-->
-                </div>
+                  </div>
             </div>
         </div>
     </section>
@@ -187,6 +178,14 @@
                     </p>
                     <p> 
                     	GIT, Github, Heroku
+                    </p>
+                    <h2>Learn About Ethereum</h2>
+                    <p>
+                        <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="files/The Modern Ethereum.pdf" class="btn btn-default btn-lg">The Modern Ethereum</a>
+                        </li>
+                    </ul>
                     </p>
                 </div>
             </div>
