rename from RFV5s to RFV

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="RFV5s Professional FinTech Services">
-    <meta name="author" content="Riaan F Venter">
+    <meta name="description" content="RFV Professional FinTech Services">
+    <meta name="author" content="Riaan Francois Venter">
 
     <link rel="icon" href="favicon.png">
 
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="img/RFV5s_yellow.svg" height="32em">
+                    <img id="RFV_logo" src="img/RFV_md.svg" height="48em">
                 </a>
                 <img id="RFV_img2" src="" height="64em" style="border:2px solid white; border-radius: 4px;"/>
             </div>
@@ -59,18 +59,15 @@
                             <font style="font-size: 0.75em;">13 years+ of wealth management and software development</font>
                             <table style="width:100%; font-size: 1.5em;">
                                 <tr>
-                                    <td><a href="mailto:email@RFV5s.com">email@RFV5s.com</a><br/><br/></td>
+                                    <td><a href="mailto:email@rfv.io">email@rfv.io</a><br/><br/></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="https://github.com/RFV5s">Github</a></td>
-                                    <td><a href="https://stackoverflow.com/users/6494274/rfv5s">Stack Overflow</a></td>
+                                    <td><a href="https://github.com/RFV-code">Github</a></td>
+                                    <td><a href="https://stackoverflow.com/users/6494274">Stack Overflow</a></td>
                                 </tr>
                                 <tr>
                                     <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
-                                    <td><a href="https://twitter.com/RFV5s">Twitter</a></td>
-                                </tr>
-                                <tr>
-                                    <td><a href="https://keybase.io/rfv5s">Keybase</a></td>
+                                    <td><a href="https://twitter.com/RFV_____">Twitter</a></td>
                                 </tr>
                             </table>
                         </p>
