Added public key

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                             <font style="font-size: 0.75em;">13 years+ of wealth management and software development</font>
                             <table style="width:100%; font-size: 1.5em;">
                                 <tr>
-                                    <td><a href="mailto:email@rfv.io">email@rfv.io</a><br/><br/></td>
+                                    <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
+                                    <td><a href="files/0F9A5AC4C0A3D10BE8EA7C46E7DF56C5439D1947public-key.gpg">Public Key</a></td>
                                 </tr>
+                                <tr/>
                                 <tr>
                                     <td><a href="https://github.com/RFV-code">Github</a></td>
                                     <td><a href="https://stackoverflow.com/users/6494274">Stack Overflow</a></td>
