--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <table style="width:100%; font-size: 1.5em;">
                                 <tr>
                                     <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
-                                    <td><a href="files/0F9A5AC4C0A3D10BE8EA7C46E7DF56C5439D1947public-key.gpg">Public Key</a></td>
+                                    <td><a href="files/0x68039526_PUBLIC.gpg">Public Key</a></td>
                                 </tr>
                                 <tr/>
                                 <tr>
@@ -69,7 +69,7 @@
                                 </tr>
                                 <tr>
                                     <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
-                                    <td><a href="https://twitter.com/RFV_____">Twitter</a></td>
+                                    <td></td>
                                 </tr>
                             </table>
                         </p>
