New front layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="starter();">
 
-    <!-- Navigation -->
+<!--     <!-- Navigation --
     <nav class="navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -42,39 +42,32 @@
                 </a>
                 <img id="RFV_img2" src="" height="64em" style="border:2px solid white; border-radius: 4px;"/>
             </div>
-            <!-- /.navbar-collapse -->
+
         </div>
-        <!-- /.container -->
-    </nav>
+
+    </nav> -->
 
     <!-- Intro Header --> 
     <header class="intro">
         <div class="intro-body">
             <div class="container">
-                <div class="row">
+                <!-- <div class="row"> -->
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
+                           <img id="RFV_logo" src="img/RFV_md.svg" height="48em"><br>
                            <b>Riaan Francois Venter</b><br>
-                           FinTech Developer, Investor and Advisor<br>
-                            <font style="font-size: 0.75em;">13 years+ of wealth management and software development</font>
-                            <table style="width:100%; font-size: 1.5em;">
-                                <tr>
-                                    <td><a href="mailto:email@rfv.io">email@rfv.io</a></td>
-                                    <td><a href="files/0x68039526_PUBLIC.gpg">Public Key</a></td>
-                                </tr>
-                                <tr/>
-                                <tr>
-                                    <td><a href="https://github.com/RFV-code">Github</a></td>
-                                    <td><a href="https://stackoverflow.com/users/6494274">Stack Overflow</a></td>
-                                </tr>
-                                <tr>
-                                    <td><a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a></td>
-                                    <td></td>
-                                </tr>
-                            </table>
+                           FinTech Specialist<br>
+                        </p>
+                        <p class="intro-links">
+                            <img id="RFV_img" src="" height="256em" style=" border-radius: 25px;"/><br>
+                            <a href="mailto:email@rfv.io">email@rfv.io</a><br>
+                            <a href="files/0x68039526_PUBLIC.gpg">Public Key</a><br>
+                            <a href="https://github.com/RFV">Github</a><br>
+                            <a href="https://stackoverflow.com/users/6494274">Stack Overflow</a><br>
+                            <a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a>
                         </p>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </header>
@@ -86,7 +79,6 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About</h1>
                     <p>
-                    <img id="RFV_img" src="" height="256em" style="border:8px solid white; border-radius: 25px;"/><br><br>
                     I Stand at the bleeding edge of finance and computation. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as manage substantially large portfolios for wealthy investors in the Middle East and London.</p>
                     <p>
                     Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
