Minimize images, Redo profile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         var myVar = setInterval(starter, 10000);
 
         function starter()  {
-            var pic_number = Math.ceil(Math.random() * 28);
+            var pic_number = Math.ceil(Math.random() * 17);
             var pic_image = document.getElementById('RFV_img');
             pic_image.src = "img/" + pic_number + '.jpg';
             var pic_image2 = document.getElementById('RFV_img2');
@@ -33,19 +33,6 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onload="starter();">
 
-<!--     <!-- Navigation --
-    <nav class="navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="img/RFV_md.svg" height="48em">
-                </a>
-                <img id="RFV_img2" src="" height="64em" style="border:2px solid white; border-radius: 4px;"/>
-            </div>
-
-        </div>
-
-    </nav> -->
 
     <!-- Intro Header --> 
     <header class="intro">
@@ -56,10 +43,16 @@
                         <p class="intro-text">
                            <img id="RFV_logo" src="img/RFV_md.svg" height="48em"><br>
                            <b>Riaan Francois Venter</b><br>
-                           FinTech Specialist<br>
+                           Computation theorist` Logician<br>
+                           <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/>
+                                                
+                        <p style="color:blue;">
+                            formal sematics` type theory` program verification and synthesis<br>
+                            category theory` mathematics<br>
+                            python` clojure` haskell` coq` prolog` rust` julia` asm` dafny` tla+<br>
                         </p>
                         <p class="intro-links">
-                            <img id="RFV_img" src="" height="256em" style=" border-radius: 25px;"/><br>
+                            
                             <a href="mailto:email@rfv.io">email@rfv.io</a><br>
                             <a href="files/0x68039526_PUBLIC.gpg">Public Key</a><br>
                             <a href="https://github.com/RFV">Github</a><br>
@@ -79,15 +72,11 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About</h1>
                     <p>
-                    I Stand at the bleeding edge of finance and computation. These two fields are my passion, and in the past 13 years, I have written a number of software solutions for leading companies as well as manage substantially large portfolios for wealthy investors in the Middle East and London.</p>
+                    Computation and Finance are my passions.</p>
                     <p>
-                    Software development focused on: numerical computation, data extraction, database implementation, data analysis. Python, Solidity, Clojure.</p>
+                    I exercise daily, eat healthy, don't drink alcohol or smoke. I do not watch TV or read news that has no relevance to me.</p>
                     <p>
-                    Wealth management in international markets. Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, and several other certificates in finance. Only for select private clients.</p>
-                    <p>
-                    Actively involved in FinTech, currently focusing on cryptocurrency investments and smart contracts, and part of a consortia exploring business opportunities within the industry.</p>
-                    <p>
-                    I am a family man, exercise daily, eat healthily, don't drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
+                    I am a focused machine.</p>
                     <p>
                     <ul class="list-inline banner-social-buttons">
                         <li>
@@ -130,53 +119,6 @@
                     </table>
                     <p>
                     <a class="btn btn-default btn-lg" href="files/certificates.zip">Certificates</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Programming Section -->
-    <section id="programming" class="content-section text-center">
-        <div class="programming-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Programming</h1>
-                    <p>
-                    	I finish every project that I start. I overcome every challenge that I face. I am able to learn whatever technology stack is required to fix problems, and I look forward to learning more.
-                    </p>
-                    <p>
-                    	I have enough practical (technical) and theorical (insight) experience to do whatever is necessary for a project to succeed, and this is why clients love me. I have substantial knowledge of computation theory, computation complexity and the history and evolution of personal computers. This is my foundation in trying to predict where the technology industry is heading towards in the future.
-                    </p>
-                    <h2>Technology Stack</h2><br>
-                    <p>                    	
-                    	Python, Numpy, Scipy, Pandas, Matplotlib, Sqlalchemy
-                    </p>
-                    <p> 
-                    	IPython, PyCharm, Sublime Text
-                    </p>
-                    <p> 
-                    	Ethereum, Solidity, Truffle
-                    </p>
-                    <p> 
-                    	Nodejs, NPM, Bootstrap, JQuery
-                    </p>
-                    <p> 
-                    	Regex
-                    </p>
-                    <p> 
-                    	MySql, PostgresSQL, Sqlite, Json, XML, Excel, CSV
-                    </p>
-                    <p> 
-                    	GIT, Github, Heroku
-                    </p>
-                    <h2>Learn About Ethereum</h2>
-                    <p>
-                        <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="files/The Modern Ethereum.pdf" class="btn btn-default btn-lg">The Modern Ethereum</a>
-                        </li>
-                    </ul>
                     </p>
                 </div>
             </div>
