--- a/index.html
+++ b/index.html
@@ -43,16 +43,13 @@
                         <p class="intro-text">
                            <img id="RFV_logo" src="img/RFV_md.svg" height="48em"><br>
                            <b>Riaan Francois Venter</b><br>
-                           Computation theorist` Logician<br>
                            <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/>
-                                                
-                        <p style="color:blue;">
-                            formal sematics` type theory` program verification and synthesis<br>
-                            category theory` mathematics<br>
-                            python` clojure` haskell` coq` prolog` rust` julia` asm` dafny` tla+<br>
-                        </p>
+                        <p>
+                            Computation, Logic and Finance are my passions.<br>
+                            I exercise daily, eat healthy, don't drink alcohol or smoke. I do not watch TV or read news that has no relevance to me.<br>
+                            I am a focused machine.
+                        </p>     
                         <p class="intro-links">
-                            
                             <a href="mailto:email@rfv.io">email@rfv.io</a><br>
                             <a href="files/0x68039526_PUBLIC.gpg">Public Key</a><br>
                             <a href="https://github.com/RFV">Github</a><br>
@@ -64,66 +61,6 @@
             </div>
         </div>
     </header>
-
-    <!-- About section -->
-    <section id="about" class="content-section text-center">
-        <div class="details-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>About</h1>
-                    <p>
-                    Computation and Finance are my passions.</p>
-                    <p>
-                    I exercise daily, eat healthy, don't drink alcohol or smoke. I do not watch TV or read news that has no relevance to me.</p>
-                    <p>
-                    I am a focused machine.</p>
-                    <p>
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a class="btn btn-default btn-lg" href="https://drive.google.com/open?id=1a7dQd7BJjtR1qF8Yx6-L_gXy4D2BExIv">Resume / CV</a>
-                        </li>
-                    </ul>
-                    </p>
-                  </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Education Section -->
-    <section id="education" class="content-section text-center">
-        <div class="education-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Education</h1>
-                    <table class="table">
-                        <tr><td>Investment Advice Diploma</td><td>Chartered Institute of Securities and Investments (London)</td></tr>
-                        <tr><td>Award in Financial Planning</td><td>CII (London)</td></tr>
-                        <tr><td>Award in General Insurance</td><td>CII (London)</td></tr>
-                        <tr><td>Qatar Financial Center Regulatory Authority - Rules and Regulations</td><td>Chartered Institute of Securities and Investments (London)</td></tr>
-                        <hr>
-                        <tr><td>Duke University</td><td>Programming Foundations with JavaScript, HTML and CSS</td></tr>
-                        <tr><td>Duke University</td><td>Java Programming: Solving Problems with Software</td></tr>
-                        <tr><td>Comptia A+</td><td>InfoTech College (London)</td></tr>
-                        <tr><td>Lynda</td><td>Learning Clojure</td></tr>
-                        <tr><td>Lynda</td><td>Code Clinic: Clojure</td></tr>
-                        <tr><td>Udemy</td><td>Javascript - From Beginner to Pro!</td></tr>
-                        <tr><td>Udemy</td><td>Assembly Language Adventures</td></tr>
-                        <tr><td>Udemy</td><td>Learn Socket Programming in C from Scratch</td></tr>
-                        <tr><td>Udemy</td><td>A Beginners Guide to Django!</td></tr>
-                        <tr><td>Udemy</td><td>Learn to Build Websites using Twitter Bootstrap</td></tr>
-                        <tr><td>Udemy</td><td>Complete JQuery And JQuery UI Course</td></tr>
-                        <tr><td>Udemy</td><td>Introduction to Web Technologies</td></tr>
-                        <tr><td>Code School</td><td>Git Real</td></tr>
-                        <tr><td>Destin Learning</td><td>Introduction to Cloud Computing and Amazon AWS!</td></tr>
-                    </table>
-                    <p>
-                    <a class="btn btn-default btn-lg" href="files/certificates.zip">Certificates</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
