--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                            <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/>
                         <p>
                             Computation, Logic and Finance are my passions.<br>
-                            I exercise daily, eat healthy, don't drink alcohol or smoke. I do not watch TV or read news that has no relevance to me.<br>
-                            I am a focused machine.
+                            I exercise, eat healthy, no alcohol or smoke.<br>
+                            From Johannesburg. Traveling the world with my family. Lived in London (4y), Dubai (4y), Doha (4y), Manila (5y), and visited Hong Kong, Singapore, Cambodia, Thailand.<br>
                         </p>     
                         <p class="intro-links">
                             <a href="files/0x68039526_PUBLIC.gpg">Public Key</a><br>
