--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <!-- <div class="row"> -->
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                           <img id="RFV_logo" src="img/RFV_md.svg" height="48em"><br>
-                           <b>Riaan Francois Venter</b><br>
-                           <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/>
+                           <img id="RFV_logo" src="img/RFV.png" height="256em" style=" border-radius: 24px;">
+                           <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/><br>
+                           <b>Riaan Francois Venter</b>
                         <p>
                             Computation, Logic and Finance are my passions.<br>
                             I exercise, eat healthy, no alcohol or smoke.<br>
