Remove bold name

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p class="intro-text">
                            <img id="RFV_logo" src="img/RFV.png" height="256em" style=" border-radius: 24px;">
                            <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/><br>
-                           <b>Riaan Francois Venter</b>
+                           Riaan Francois Venter
                         <p>
                             Computation, Logic and Finance are my passions.<br>
                             I exercise, eat healthy, no alcohol or smoke.<br>
