--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="RFV Professional FinTech Services">
+    <meta name="description" content="RFV FinTech Professional">
     <meta name="author" content="Riaan Francois Venter">
 
     <link rel="icon" href="favicon.png">
@@ -41,9 +41,9 @@
                 <!-- <div class="row"> -->
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                           <img id="RFV_logo" src="img/RFV.png" height="256em" style=" border-radius: 24px;">
-                           <img id="RFV_img" src="" height="256em" style=" border-radius: 24px;"/><br>
-                           Riaan Francois Venter
+                           <img id="RFV_logo" src="img/RFV.png" height="192em">
+                           <img id="RFV_img" src="" height="192em" style=" border-radius: 8px;"/><br>
+                           <font color="grey">Riaan Francois Venter</font>
                         <p>
                             Computation, Logic and Finance are my passions.<br>
                             I exercise, eat healthy, no alcohol or smoke.<br>
