renamed public ky file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             From Johannesburg. Traveling the world with my family. Lived in London (4y), Dubai (4y), Doha (4y), Manila (5y), and visited Hong Kong, Singapore, Cambodia, Thailand.<br>
                         </p>     
                         <p class="intro-links">
-                            <a href="files/0x68039526_PUBLIC.gpg">Public Key</a><br>
+                            <a href="files/0x68039526.asc">Public Key</a><br>
                             <a href="https://github.com/RFV">Github</a><br>
                             <a href="https://stackoverflow.com/users/6494274">Stack Overflow</a><br>
                             <a href="https://www.linkedin.com/in/riaanfrancoisventer/">LinkedIn</a>
