--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <!-- <div class="row"> -->
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text">
-                           <img id="RFV_logo" src="img/RFV.png" height="192em">
+                           <img src="img/RFV.png" height="192em">
+                           <img src="img/qr.png" height="192em"/>
                            <img id="RFV_img" src="" height="192em" style=" border-radius: 8px;"/><br>
                            <font color="grey">Riaan Francois Venter</font>
                         <p>
