--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
     <script type="text/JavaScript">
-        var myVar = setInterval(starter, 10000);
+        var list = [1, 2, 3, 4, 5, 6, 7, 8]
+        list = list.sort(() => Math.random() - 0.5)
+
+        var index = 0;
+
+        var myVar = setInterval(starter, 8000);
 
         function starter()  {
-            var pic_number = Math.ceil(Math.random() * 10);
+            var pic_number = list[index];
+            index = (index == 7 ? 0 : index + 1)
             var pic_image = document.getElementById('RFV_img');
             pic_image.src = "img/" + pic_number + '.jpg';
-            var pic_image2 = document.getElementById('RFV_img2');
-            pic_image2.src = "img/" + pic_number + '.jpg';
         }
     </script>
 </head>
